--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.url=jdbc:h2:./h2db/keijidaisuki
+spring.datasource.url=jdbc:h2:~/keijidaisuki
+# spring.datasource.url=jdbc:h2:./h2db/keijidaisuki
 # DBを永続化したければ↓のように指定する(memはインメモリなのでSpringbootを終了すると消える)
 # 参考：https://qiita.com/5zm/items/4916d517b45ca9dc5a4b
 #spring.datasource.url=jdbc:h2:./h2db/inudaisuki
